@@ -15,6 +15,7 @@ NEWS
   * [configparser] don't continue after parse error (fixes #2717)
   * [core] never evaluate else branches until the previous branches are ready (fixes #2598)
   * [core] fix conditional cache handling
+  * [core] improve conditional enabling (thx Gwenlliana, #2598)
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
